--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <!--
-* CoreUI Free React.js Admin Template
-* @version v5.2.0
-* @link https://coreui.io/product/free-react-admin-template/
-* Copyright (c) 2025 creativeLabs Łukasz Holeczek
-* Licensed under MIT (https://github.com/coreui/coreui-free-react-admin-template/blob/main/LICENSE)
+Building app by mexemai.com
 -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template">
-    <meta name="author" content="Łukasz Holeczek">
-    <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
+    <meta name="description" content="Dashboard for Energy Managment system">
+    <meta name="author" content="Misbah Ul hassan">
+    <meta name="keyword" content="Dashboard, IOT, MexemAI, EMS, Power, Watts, Volts, Gateway, ">
     <title>EMS</title>
     <link rel="manifest" href="/manifest.json">
     <link rel="shortcut icon" href="/022.png">
