changes in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="keyword" content="mexemai, Dashboard, Engeenring, IOT, Industrial, Automation, AI, Robotics, Energy management">
     <title>EMS</title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="./assets/images/022.png">
+    <link rel="shortcut icon" href="/assets/images/022.svg">
   </head>
   <body>
     <noscript>
