--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
 <!DOCTYPE html>
-<!--
-* CoreUI Free React.js Admin Template
-* @version v5.2.0
-* @link https://coreui.io/product/free-react-admin-template/
-* Copyright (c) 2025 creativeLabs Łukasz Holeczek
-* Licensed under MIT (https://github.com/coreui/coreui-free-react-admin-template/blob/main/LICENSE)
--->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -16,7 +9,7 @@
     <meta name="keyword" content="EMS, Enery, management, System, MexemAI, Automation, IOT, IIOT, AI, saas, ERP>
     <title>EMS</title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="/022.png">
+    <link rel="shortcut icon" href="/022.svg">
   </head>
   <body>
     <noscript>
