Your meaningful commit message

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Energy Management System">
     <meta name="author" content="MexemAI">
-    <meta name="keyword" content="EMS, Enery, management, System, MexemAI, Automation, IOT, IIOT, AI, saas, ERP>
+    <meta name="keyword" content="EMS, Enery, management, System, MexemAI, Automation, IOT, IIOT, AI, saas, ERP">
     <title>EMS</title>
     <link rel="manifest" href="/manifest.json">
     <link rel="shortcut icon" href="/022.svg">
